--- a/index.html
+++ b/index.html
@@ -5,70 +5,47 @@
   <title>Credits of Goodwill</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: sans-serif;
       padding: 20px;
-      background: #121212;
+      background: #1e1e1e;
       color: white;
       text-align: center;
     }
 
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-
-    textarea {
-      width: 80%;
-      max-width: 600px;
-      height: 80px;
-      font-size: 1rem;
-      margin-bottom: 10px;
-      border-radius: 6px;
-      padding: 10px;
-    }
-
-    .slider-wrapper {
-      overflow-x: auto;
-      white-space: nowrap;
-      padding: 10px;
-      margin-bottom: 30px;
-    }
-
     .slider-container {
-      display: inline-flex;
-      gap: 20px;
-      justify-content: flex-start;
-      padding-bottom: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+      margin-bottom: 30px;
     }
 
     .student {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: #2a2a2a;
-      padding: 12px;
-      border-radius: 10px;
-      width: 70px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      background: #2e2e2e;
+      padding: 10px;
+      border-radius: 8px;
+      width: 60px;
     }
 
     input[type="range"] {
       writing-mode: bt-lr;
       -webkit-appearance: slider-vertical;
-      height: 140px;
-      width: 30px;
+      height: 120px;
+      width: 25px;
       margin-bottom: 10px;
     }
 
     .student-name {
       margin-top: 5px;
-      font-size: 13px;
+      font-size: 12px;
     }
 
     .value {
       font-weight: bold;
       margin-top: 5px;
-      font-size: 14px;
     }
 
     .yellow {
@@ -80,15 +57,14 @@
     }
 
     .green {
-      color: #00e676;
+      color: lightgreen;
     }
 
     button {
       padding: 10px 20px;
-      margin: 5px;
       background: #00bcd4;
       border: none;
-      border-radius: 6px;
+      border-radius: 4px;
       color: black;
       font-weight: bold;
       cursor: pointer;
@@ -97,81 +73,93 @@
     button:hover {
       background: #0097a7;
     }
+
+    @media (max-width: 600px) {
+      .student {
+        width: 45px;
+        padding: 6px;
+      }
+    }
   </style>
 </head>
 <body>
 
 <h2>Credits of Goodwill</h2>
 
-<textarea id="nameInput" placeholder="Enter names here, one per line..."></textarea><br>
-<button onclick="generateSliders()">Load Names</button>
-
-<div class="slider-wrapper">
-  <div class="slider-container" id="sliderContainer"></div>
-</div>
+<div class="slider-container" id="sliderContainer"></div>
 
 <button onclick="downloadCSV()">Download Slider Values (CSV)</button>
 
 <script>
-  function generateSliders() {
-    const container = document.getElementById('sliderContainer');
-    container.innerHTML = '';
-    const namesRaw = document.getElementById('nameInput').value;
-    const names = namesRaw.split(/\n|,/).map(name => name.trim()).filter(name => name);
+  const studentNames = [
+    'Bobby', 'Cake', 'Cici', 'Don', 'Hai', 'John', 'Khun', 'Minute',
+    'Nene', 'Pitta', 'Porsche', 'Pukan', 'Roger', 'Sunshine', 'Zen'
+  ];
 
-    names.forEach(name => {
-      const studentDiv = document.createElement('div');
-      studentDiv.className = 'student';
+  const container = document.getElementById('sliderContainer');
 
-      const slider = document.createElement('input');
-      slider.type = 'range';
-      slider.min = -2;
-      slider.max = 10;
-      slider.value = 5;
-      slider.dataset.name = name;
-
-      const valueLabel = document.createElement('div');
-      valueLabel.className = 'value';
-      valueLabel.innerText = slider.value;
-
-      slider.addEventListener('input', () => {
-        let val = parseInt(slider.value);
-        valueLabel.classList.remove('yellow', 'red', 'green');
-
-        if (val === -1) {
-          valueLabel.innerText = '⚠️ WARNING';
-          valueLabel.classList.add('yellow');
-        } else if (val <= -2) {
-          valueLabel.innerText = '🚫 DETENTION';
-          valueLabel.classList.add('red');
-        } else if (val === 10) {
-          valueLabel.innerText = '😁 10';
-          valueLabel.classList.add('green');
-        } else {
-          valueLabel.innerText = val;
-        }
-      });
-
-      const nameLabel = document.createElement('div');
-      nameLabel.className = 'student-name';
-      nameLabel.innerText = name;
-
-      studentDiv.appendChild(slider);
-      studentDiv.appendChild(valueLabel);
-      studentDiv.appendChild(nameLabel);
-      container.appendChild(studentDiv);
-    });
+  function getColor(value) {
+    const percent = (value + 1) / 6;
+    const r = Math.round(255 * (1 - percent));
+    const g = Math.round(255 * percent);
+    return `rgb(${r},${g},0)`;
   }
 
+  studentNames.forEach(name => {
+    const studentDiv = document.createElement('div');
+    studentDiv.className = 'student';
+
+    const slider = document.createElement('input');
+    slider.type = 'range';
+    slider.min = -1;
+    slider.max = 5;
+    slider.value = 3;
+    slider.dataset.name = name;
+
+    const valueLabel = document.createElement('div');
+    valueLabel.className = 'value';
+
+    function updateDisplay(val) {
+      valueLabel.className = 'value';
+      if (val == -1) {
+        valueLabel.innerText = '🚫 DETENTION';
+        valueLabel.classList.add('red');
+      } else if (val == 0) {
+        valueLabel.innerText = '⚠️ WARNING';
+        valueLabel.classList.add('yellow');
+      } else {
+        valueLabel.innerText = val;
+        valueLabel.classList.add('green');
+      }
+      slider.style.background = getColor(val);
+    }
+
+    updateDisplay(slider.value);
+
+    slider.addEventListener('input', () => {
+      updateDisplay(parseInt(slider.value));
+    });
+
+    const nameLabel = document.createElement('div');
+    nameLabel.className = 'student-name';
+    nameLabel.innerText = name;
+
+    studentDiv.appendChild(slider);
+    studentDiv.appendChild(valueLabel);
+    studentDiv.appendChild(nameLabel);
+    container.appendChild(studentDiv);
+  });
+
   function downloadCSV() {
-    let csv = 'Student,Value\n';
+    let csv = 'Student,Value
+';
     document.querySelectorAll('input[type=range]').forEach(slider => {
       let val = parseInt(slider.value);
       let displayVal = val;
-      if (val === -1) displayVal = 'WARNING';
-      if (val <= -2) displayVal = 'DETENTION';
-      if (val === 10) displayVal = '10 (SMILE)';
-      csv += `${slider.dataset.name},${displayVal}\n`;
+      if (val === -1) displayVal = 'DETENTION';
+      if (val === 0) displayVal = 'WARNING';
+      csv += `${slider.dataset.name},${displayVal}
+`;
     });
 
     const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
@@ -181,67 +169,6 @@
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
-  }
-
-  // Load names from localStorage on page load
-  window.onload = function() {
-    const savedNames = localStorage.getItem('goodwillNames');
-    if (savedNames) {
-      document.getElementById('nameInput').value = savedNames;
-      generateSliders(); // auto-generate sliders
-    }
-  };
-
-  // Save names to localStorage when user loads names
-  function generateSliders() {
-    const container = document.getElementById('sliderContainer');
-    container.innerHTML = '';
-    const namesRaw = document.getElementById('nameInput').value;
-    localStorage.setItem('goodwillNames', namesRaw); // save to localStorage
-    const names = namesRaw.split(/\n|,/).map(name => name.trim()).filter(name => name);
-
-    names.forEach(name => {
-      const studentDiv = document.createElement('div');
-      studentDiv.className = 'student';
-
-      const slider = document.createElement('input');
-      slider.type = 'range';
-      slider.min = -2;
-      slider.max = 10;
-      slider.value = 5;
-      slider.dataset.name = name;
-
-      const valueLabel = document.createElement('div');
-      valueLabel.className = 'value';
-      valueLabel.innerText = slider.value;
-
-      slider.addEventListener('input', () => {
-        let val = parseInt(slider.value);
-        valueLabel.classList.remove('yellow', 'red', 'green');
-
-        if (val === -1) {
-          valueLabel.innerText = '⚠️ WARNING';
-          valueLabel.classList.add('yellow');
-        } else if (val <= -2) {
-          valueLabel.innerText = '🚫 DETENTION';
-          valueLabel.classList.add('red');
-        } else if (val === 10) {
-          valueLabel.innerText = '😁 10';
-          valueLabel.classList.add('green');
-        } else {
-          valueLabel.innerText = val;
-        }
-      });
-
-      const nameLabel = document.createElement('div');
-      nameLabel.className = 'student-name';
-      nameLabel.innerText = name;
-
-      studentDiv.appendChild(slider);
-      studentDiv.appendChild(valueLabel);
-      studentDiv.appendChild(nameLabel);
-      container.appendChild(studentDiv);
-    });
   }
 </script>
 
