behaviour boxes side by side

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <button onclick="downloadCSV()">Download Slider Values (CSV)</button>
 
-<div class="behavior-box good-behaviors">
+<div style="display: flex; justify-content: center; gap: 40px; margin-top: 40px;"><div class="behavior-box good-behaviors">
   <h3>✔️ Positive Behaviors</h3>
   <ul>
     <li>Politeness</li>
@@ -130,7 +130,7 @@
   </ul>
 </div>
 
-<div class="behavior-box bad-behaviors">
+</div><div class="behavior-box bad-behaviors">
   <h3>❌ Negative Behaviors</h3>
   <ul>
     <li>Impoliteness</li>
@@ -140,7 +140,7 @@
     <li>Lack of effort</li>
     <li>Incorrect uniform</li>
   </ul>
-</div>
+</div></div>
 
 <script>
   const container = document.getElementById('sliderContainer');
