--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
 <button onclick="downloadCSV()">Download Slider Values (CSV)</button>
 
-<div style="display: flex; justify-content: center; gap: 40px; margin-top: 40px;"><div class="behavior-box good-behaviors">
+<div class="behavior-row" style="display: flex; justify-content: center; flex-wrap: wrap; gap: 40px; margin-top: 40px;">
+<div class="behavior-box good-behaviors" style="min-width: 250px;">
   <h3>✔️ Positive Behaviors</h3>
   <ul>
     <li>Politeness</li>
@@ -130,7 +131,8 @@
   </ul>
 </div>
 
-</div><div class="behavior-box bad-behaviors">
+</div>
+<div class="behavior-box bad-behaviors" style="min-width: 250px;">
   <h3>❌ Negative Behaviors</h3>
   <ul>
     <li>Impoliteness</li>
@@ -140,7 +142,8 @@
     <li>Lack of effort</li>
     <li>Incorrect uniform</li>
   </ul>
-</div></div>
+</div>
+</div>
 
 <script>
   const container = document.getElementById('sliderContainer');
