--- a/index.html
+++ b/index.html
@@ -129,16 +129,37 @@
 
 <div class="behavior-wrapper">
   <div class="behavior-box good-behaviors">
+<h3>🟩 Positive Behaviors:</h3>
+<ul>
+<li>😊 Politeness</li>
+<li>🙌 Respect</li>
+<li>⏰ Being on time</li>
+<li>📘 Handing in homework</li>
+<li>💪 Trying your best</li>
+<li>😂 Generous sense of humour</li>
+<li>🗣️ Speaking English</li>
+</ul>
     <h3>✔️ Positive Behaviors</h3>
     <ul>
-      <li>Speaking English</li>
+      <li>🗣️ Speaking English</li>
     </ul>
   </div>
 
   <div class="behavior-box bad-behaviors">
+<h3>🟥 Negative Behaviors:</h3>
+<ul>
+<li>😠 Impoliteness</li>
+<li>👎 Disrespect</li>
+<li>🕒 Lateness</li>
+<li>📕 No homework</li>
+<li>😴 Lack of effort</li>
+<li>👔 Incorrect uniform</li>
+<li>🗯️ Unnecessary comments</li>
+<li>🔇 Speaking Thai / Chinese</li>
+</ul>
     <h3>❌ Negative Behaviors</h3>
     <ul>
-      <li>Speaking Thai / Chinese</li>
+      <li>🔇 Speaking Thai / Chinese</li>
     </ul>
   </div>
 </div>
