--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     .green { color: lightgreen; }
 
     .behavior-box {
+      background-color: rgba(255, 255, 255, 0.05);
       padding: 15px;
       border-radius: 8px;
       text-align: left;
@@ -82,10 +83,12 @@
     }
 
     .good-behaviors {
+      background-color: #317847;
       background-color: #2e7031;
     }
 
     .bad-behaviors {
+      background-color: #a3335a;
       background-color: #af3b6e;
     }
 
@@ -129,7 +132,7 @@
 
 <div class="behavior-wrapper">
   <div class="behavior-box good-behaviors">
-<h3>🟩 Positive Behaviors:</h3>
+<h3 style="text-align: center; margin-bottom: 10px;">🟩 Positive Behaviors:</h3>
 <ul>
 <li>😊 Politeness</li>
 <li>🙌 Respect</li>
@@ -139,14 +142,14 @@
 <li>😂 Generous sense of humour</li>
 <li>🗣️ Speaking English</li>
 </ul>
-    <h3>✔️ Positive Behaviors</h3>
+    <h3 style="text-align: center; margin-bottom: 10px;">🟩 Positive Behaviors:</h3>
     <ul>
       <li>🗣️ Speaking English</li>
     </ul>
   </div>
 
   <div class="behavior-box bad-behaviors">
-<h3>🟥 Negative Behaviors:</h3>
+<h3 style="text-align: center; margin-bottom: 10px;">🟥 Negative Behaviors:</h3>
 <ul>
 <li>😠 Impoliteness</li>
 <li>👎 Disrespect</li>
@@ -157,7 +160,7 @@
 <li>🗯️ Unnecessary comments</li>
 <li>🔇 Speaking Thai / Chinese</li>
 </ul>
-    <h3>❌ Negative Behaviors</h3>
+    <h3 style="text-align: center; margin-bottom: 10px;">🟥 Negative Behaviors:</h3>
     <ul>
       <li>🔇 Speaking Thai / Chinese</li>
     </ul>
