--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <title>Credits of Goodwill</title>
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background: #1e1e1e;
-      color: white;
-      text-align: center;
-    }
+    
+body {
+  font-family: sans-serif;
+  padding: 20px;
+  background: url('sisb_background_soft.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  backdrop-filter: brightness(0.9);
+}
+
 
     #controls {
       margin-bottom: 20px;
