with background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   font-family: sans-serif;
   padding: 20px;
-  background: url('sisb_background_soft.jpg') no-repeat center center fixed;
+  background: url('./sisb_background_soft.jpg') no-repeat center center fixed;
   background-size: cover;
   color: white;
   text-align: center;
